Third Commint added more functionality

--- a/FinalProject1/FinalProject1/MainWindow.xaml
+++ b/FinalProject1/FinalProject1/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProject1"
-        mc:Ignorable="d" FontSize="15" Loaded="Window_Loaded"
+        mc:Ignorable="d" 
   
         Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,-8,-21">
@@ -12,17 +12,21 @@
             <ColumnDefinition Width="37*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="303,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="button" Content="Get Repo" HorizontalAlignment="Left" Margin="221,107,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.236,2.667" Click="Button_Click"/>
-        <Label x:Name="label" Content="Enter Username" HorizontalAlignment="Left" Margin="150,26,0,0" VerticalAlignment="Top" Width="115"/>
-        <Button x:Name="button_Copy" Content="Get Commit" HorizontalAlignment="Left" Margin="394,107,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.236,2.667"/>
-        <RichTextBox x:Name="richTextBox" HorizontalAlignment="Left" Height="116" Margin="150,149,0,0" VerticalAlignment="Top" Width="484">
+        <TextBox x:Name="usernametextBox" HorizontalAlignment="Left" Height="23" Margin="289,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="getrepoButton" Content="Get Repo" HorizontalAlignment="Left" Margin="476,38,0,0" VerticalAlignment="Top" Width="79" RenderTransformOrigin="0.236,2.667" Click="Button_Click"/>
+        <Label x:Name="label" Content="Enter Username" HorizontalAlignment="Left" Margin="138,23,0,0" VerticalAlignment="Top" Width="115"/>
+        <Button x:Name="getcommitButton" Content="Get Commit" HorizontalAlignment="Left" Margin="629,38,0,0" VerticalAlignment="Top" Width="101" RenderTransformOrigin="0.236,2.667" Click="Button_Copy_Click"/>
+        <RichTextBox x:Name="richTextBox" HorizontalAlignment="Left" Height="272" Margin="431,113,0,0" VerticalAlignment="Top" Width="346" Grid.ColumnSpan="2">
             <FlowDocument>
                 <Paragraph>
-                    <Run Text="RichTextBox"/>
+                    <Run/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
+        <TextBox x:Name="fetchtextBox" HorizontalAlignment="Left" Height="23" Margin="177,193,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label1" Content="Fetch Json Item by entering Key" HorizontalAlignment="Left" Margin="120,146,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label2" Content="Enter repos if you are Getting Repo" HorizontalAlignment="Left" Margin="10,67,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="repotextBox" HorizontalAlignment="Left" Height="23" Margin="270,67,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="164"/>
 
     </Grid>
 </Window>
