--- a/FinalProject1/FinalProject1/MainWindow.xaml
+++ b/FinalProject1/FinalProject1/MainWindow.xaml
@@ -12,21 +12,21 @@
             <ColumnDefinition Width="37*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="usernametextBox" HorizontalAlignment="Left" Height="23" Margin="289,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="getrepoButton" Content="Get Repo" HorizontalAlignment="Left" Margin="476,38,0,0" VerticalAlignment="Top" Width="79" RenderTransformOrigin="0.236,2.667" Click="Button_Click"/>
+        <TextBox x:Name="usernametextBox" HorizontalAlignment="Left" Height="23" Margin="258,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="getrepoButton" Content="Get Repo" HorizontalAlignment="Left" Margin="472,73,0,0" VerticalAlignment="Top" Width="79" RenderTransformOrigin="0.236,2.667" Click="Button_Click" Background="#FF2CB489"/>
         <Label x:Name="label" Content="Enter Username" HorizontalAlignment="Left" Margin="138,23,0,0" VerticalAlignment="Top" Width="115"/>
-        <Button x:Name="getcommitButton" Content="Get Commit" HorizontalAlignment="Left" Margin="629,38,0,0" VerticalAlignment="Top" Width="101" RenderTransformOrigin="0.236,2.667" Click="Button_Copy_Click"/>
-        <RichTextBox x:Name="richTextBox" HorizontalAlignment="Left" Height="272" Margin="431,113,0,0" VerticalAlignment="Top" Width="346" Grid.ColumnSpan="2">
+        <Button x:Name="getcommitButton" Content="Get Commit" HorizontalAlignment="Left" Margin="590,73,0,0" VerticalAlignment="Top" Width="101" RenderTransformOrigin="0.236,2.667" Click="Button_Copy_Click" Background="#FF3B6BB2"/>
+        <RichTextBox x:Name="richTextBox" HorizontalAlignment="Left" Height="272" Margin="43,134,0,0" VerticalAlignment="Top" Width="712" Grid.ColumnSpan="2">
             <FlowDocument>
                 <Paragraph>
                     <Run/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
-        <TextBox x:Name="fetchtextBox" HorizontalAlignment="Left" Height="23" Margin="177,193,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="label1" Content="Fetch Json Item by entering Key" HorizontalAlignment="Left" Margin="120,146,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label2" Content="Enter repos if you are Getting Repo" HorizontalAlignment="Left" Margin="10,67,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="repotextBox" HorizontalAlignment="Left" Height="23" Margin="270,67,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="164"/>
+        <TextBox x:Name="repotextBox" HorizontalAlignment="Left" Height="23" Margin="231,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="164" RenderTransformOrigin="0.502,-0.043"/>
+        <Label x:Name="label1" Content="The output will display below in a key pair json format" HorizontalAlignment="Left" Margin="204,98,0,0" VerticalAlignment="Top" Height="31" Width="314"/>
+        <Button x:Name="button" Content="Exit" HorizontalAlignment="Left" Margin="700,9,0,0" VerticalAlignment="Top" Width="79" Height="23" Grid.ColumnSpan="2" Background="#FFC12121" Click="Button_Click_1"/>
 
     </Grid>
 </Window>
